--- a/game.html
+++ b/game.html
@@ -29,7 +29,67 @@ Project
 		
 </ul>		
 </div>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<div class="upper-cards">
+ <div class="row1-left-1" >
+<img  src="images/card.png" alt="card image"/>
+	
+</div>
 
+
+<div class="row1-left-2">
+<img src="images/outline.png" alt="outline image"/>
+
+</div>
+<div class="row1-left-2">
+
+</div>
+<div class="row1">
+<img src="images/outline.png" alt="outline image"/>
+
+</div>
+		
+	
+<div class="row1">	
+<img src="images/outline.png" alt="outline image"/>
+	
+</div>
+
+<div class="row1">	
+<img src="images/outline.png" alt="outline image"/>
+</div>
+<div class="row1">	
+<img src="images/outline.png" alt="outline image"/>
+</div>
+
+</div>
+
+
+<div class="bottom-cards">
+ <div class="row2" >
+<img  src="images/8club.png" alt="card image"/>
+	
+</div>
+</div>
+
+
+
+
+<div class="row-stack1">
+<div class="imageone image" id="row2-col2-1"><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image2 image" id="row2-col2-2"><img src="images/qspade.png" alt="outline image"/></div>
+</div>
+
+<div class="row-stack2">
+<div class="image3-1 image" id="row2-col3-1"><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image3-2 image" id="row2-col3-2"><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image3-3 image" id="row2-col3-3"><img src="images/5diam.png" alt="outline image"/></div>
+
+</div>
 
 
 </body>
