--- a/game.html
+++ b/game.html
@@ -42,7 +42,7 @@ Project
 
 
 <div class="row1-left-2">
-<img src="images/outline.png" alt="outline image"/>
+<img src="images/outline1.png" alt="outline image"/>
 
 </div>
 <div class="row1-left-2">
@@ -50,20 +50,20 @@ Project
 </div>
 <div class="row1">
 
-<img src="images/outline.png" alt="outline image"/>
+<img src="images/outline1.png" alt="outline image"/>
 </div>
 		
 	
 <div class="row1">	
-<img src="images/outline.png" alt="outline image"/>
+<img src="images/outline1.png" alt="outline image"/>
 	
 </div>
 
 <div class="row1">	
-<img src="images/outline.png" alt="outline image"/>
+<img src="images/outline1.png" alt="outline image"/>
 </div>
 <div class="row1">	
-<img src="images/outline.png" alt="outline image"/>
+<img src="images/outline1.png" alt="outline image"/>
 </div>
 
 </div>
