--- a/game.html
+++ b/game.html
@@ -80,49 +80,49 @@ Project
 
 
 <div class="row-stack1">
-<div class="imageone image" id="row2-col2-1"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image2 image" id="row2-col2-2"><img src="images/qspade.png" alt="outline image"/></div>
+<div class="imageone image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image2 image" ><img src="images/qspade.png" alt="outline image"/></div>
 </div>
 
 <div class="row-stack2">
-<div class="image3-1 image" id="row2-col3-1"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image3-2 image" id="row2-col3-2"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image3-3 image" id="row2-col3-3"><img src="images/qheart.png" alt="outline image"/></div>
+<div class="image3-1 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image3-2 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image3-3 image" ><img src="images/qheart.png" alt="outline image"/></div>
 
 </div>
 
 <div class="row-stack3">
-<div class="image4-1 image" id="row2-col3-1"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-2 image" id="row2-col3-2"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-3 image" id="row2-col3-3"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-3 image" id="row2-col3-3"><img src="images/5diam.png" alt="outline image"/></div>
+<div class="image4-1 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-2 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-3 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-3 image" ><img src="images/5diam.png" alt="outline image"/></div>
 
 </div>
 <div class="row-stack4">
-<div class="image4-1 image" id="row2-col3-1"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-2 image" id="row2-col3-2"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-3 image" id="row2-col3-3"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-3 image" id="row2-col3-3"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-3 image" id="row2-col3-3"><img src="images/qclub.png" alt="outline image"/></div>
+<div class="image4-1 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-2 image"><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-3 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-3 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-3 image"><img src="images/qclub.png" alt="outline image"/></div>
 
 </div>
 <div class="row-stack5">
-<div class="image4-1 image" id="row2-col3-1"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-2 image" id="row2-col3-2"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-3 image" id="row2-col3-3"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-3 image" id="row2-col3-3"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-3 image" id="row2-col3-3"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-3 image" id="row2-col3-3"><img src="images/7heart.png" alt="outline image"/></div>
+<div class="image4-1 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-2 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-3 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-3 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-3 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-3 image" ><img src="images/7heart.png" alt="outline image"/></div>
 
 </div>
 <div class="row-stack6">
-<div class="image4-1 image" id="row2-col3-1"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-2 image" id="row2-col3-2"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-3 image" id="row2-col3-3"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-3 image" id="row2-col3-3"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-3 image" id="row2-col3-3"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-3 image" id="row2-col3-3"><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image4-3 image" id="row2-col3-3"><img src="images/adiam.png" alt="outline image"/></div>
+<div class="image4-1 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-2 image"><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-3 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-3 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-3 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-3 image" ><img src="images/card.jpg" alt="outline image"/></div>
+<div class="image4-3 image" ><img src="images/adiam.png" alt="outline image"/></div>
 
 </div>
 </body>
