--- a/game.html
+++ b/game.html
@@ -21,6 +21,7 @@ Project
 <!--class to display score-->
 		<li class ="score">
 		Score:
+		
 		</li>
 <!--class to display time-->		
 		<li class ="time">
@@ -32,8 +33,13 @@ Project
 <br/>
 <br/>
 <br/>
+<form>
+<button class="button"formaction="home.html"><span>Home</span></button>&nbsp;
+<button class="button"formaction="game.html"><span>Undo</span></button>&nbsp;<button class="button"formaction="game.html"><span>Restart</span></button></form>
+
+
 <br/>
-<br/>
+
 <div class="upper-cards">
  <div class="row1-left-1" >
 <img  src="images/card.png" alt="card image"/>
