--- a/game1.html
+++ b/game1.html
@@ -8,7 +8,7 @@ Project
   <title>Solitaire game</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/game.css">
+  <link rel="stylesheet" href="css/game1.css">
  </head>
 <body>
 
@@ -34,10 +34,8 @@ Project
 <br/>
 <br/>
 <form>
-<button class="button"formaction="home.html"><span>Home</span></button>&nbsp;
-<button class="button"formaction="game.html"><span>Undo</span></button>&nbsp;<button class="button"formaction="game.html"><span>Restart</span></button>
-<button class="button"formaction="game1.html"><span>New Game</span></button>
-</form>
+<button class="button"formaction="game.html"><span>Home</span></button>&nbsp;
+<button class="button"formaction="game1.html"><span>Undo</span></button>&nbsp;<button class="button"formaction="game1.html"><span>Restart</span></button></form>
 
 
 <br/>
@@ -49,8 +47,10 @@ Project
 </div>
 
 
-<div class="row1-left-2">
-<img src="images/outline1.png" alt="outline image"/>
+<div class="row1-left-2-1">
+<div class="imagel-1 image" ><img src="images/kspade.png" alt="outline image"/></div>
+<div class="imagel-2 image" ><img src="images/aheart.png" alt="outline image"/></div>
+<div class="imagel-3 image" ><img src="images/aspade.png" alt="outline image"/></div>
 
 </div>
 <div class="row1-left-2">
