--- a/game1.html
+++ b/game1.html
@@ -58,20 +58,20 @@ Project
 </div>
 <div class="row1">
 
-<img src="images/outline1.png" alt="outline image"/>
+<img src="images/outline2.png" alt="outline image"/>
 </div>
 		
 	
 <div class="row1">	
-<img src="images/outline1.png" alt="outline image"/>
+<img src="images/outline2.png" alt="outline image"/>
 	
 </div>
 
 <div class="row1">	
-<img src="images/outline1.png" alt="outline image"/>
+<img src="images/outline2.png" alt="outline image"/>
 </div>
 <div class="row1">	
-<img src="images/outline1.png" alt="outline image"/>
+<img src="images/outline2.png" alt="outline image"/>
 </div>
 
 </div>
@@ -89,13 +89,13 @@ Project
 
 <div class="row-stack1">
 <div class="imageone image" ><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image2 image" ><img src="images/qspade.png" alt="outline image"/></div>
+<div class="image2 image" ><img src="images/6spade.png" alt="outline image"/></div>
 </div>
 
 <div class="row-stack2">
 <div class="image3-1 image" ><img src="images/card.jpg" alt="outline image"/></div>
 <div class="image3-2 image" ><img src="images/card.jpg" alt="outline image"/></div>
-<div class="image3-3 image" ><img src="images/qheart.png" alt="outline image"/></div>
+<div class="image3-3 image" ><img src="images/aclub.png" alt="outline image"/></div>
 
 </div>
 
