--- a/game.html
+++ b/game.html
@@ -20,7 +20,7 @@ Project
 		</li>
 <!--class to display score-->
 		<li class ="score">
-		Score:
+		Score:000
 		
 		</li>
 <!--class to display time-->		
@@ -34,7 +34,7 @@ Project
 <br/>
 <br/>
 <form>
-<button class="button" formaction="home.html"><span>Home</span></button>&nbsp;
+<button class="button" formaction="solitairehome.html"><span>Home</span></button>&nbsp;
 <button class="button" formaction="game.html"><span>Undo</span></button>&nbsp;<button class="button" formaction="game.html"><span>Restart</span></button>
 <button class="button" formaction="game1.html"><span>New Game</span></button>
 </form>
