--- a/solitairehome.html
+++ b/solitairehome.html
@@ -2,15 +2,17 @@
 <html>
 <title>Solitaire</title>
 <head>
-<link rel="stylesheet" type="text/css" href="home.css">
+<link rel="stylesheet" type="text/css" href="css/home.css">
 </head>
 <body id="home">
 <div class="logo">
-<img src="logo.png" style="width:580px;height:380px;" align="center"/>
+<img src="images/logo.png">   </img>
 </div>
+<br/>
+<br/>
 <div class="button">
-<button class="button button1"><b>START</b></button><br>
-<button class="button button2"><a href="help.html"<b>HELP</b></button><br>
+<form><button class="button button1" formaction="game.html"><b>START</b></button><br>
+<button class="button button2" formaction="help.html"><b>HELP</b></button><br></form>
 </div>
 </body>
 </html>
