--- a/game1.html
+++ b/game1.html
@@ -34,7 +34,7 @@ Project
 <br/>
 <br/>
 <form>
-<button class="button" formaction="game.html"><span>Home</span></button>&nbsp;
+<button class="button" formaction="solitairehome.html"><span>Home</span></button>&nbsp;
 <button class="button" formaction="game1.html"><span>Undo</span></button>&nbsp;<button class="button" formaction="game1.html"><span>Restart</span></button></form>
 
 
